cmake_minimum_required(VERSION 3.13.0 FATAL_ERROR)
set(CMAKE_SUPPRESS_REGENERATION true)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/sdl2)

set(CMAKE_SYSTEM_VERSION 10.0 CACHE STRING "" FORCE)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(DCMAKE_EXPORT_COMPILE_OPTIONS 1)

project(Empaerior CXX)

add_subdirectory(Application)
add_subdirectory(Empaerior)

